--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.liga.dcs</groupId>
+    <groupId>ru.liga</groupId>
     <artifactId>CargoDistributor</artifactId>
     <version>1.0-SNAPSHOT</version>
 
