refactoring: removed interface CargoList, split CargoVanToJsonConverter into FileService and CargoConverterService, fixed and added tests

--- a/src/test/resources/json_vans_test/.gitignore
+++ b/src/test/resources/json_vans_test/.gitignore
@@ -1,4 +1,4 @@
-# Do not remove, without this directory CargoVanToJsonConverterTest throws NullPointerException
+# Do not remove, without this directory FileServiceTest throws NullPointerException
 # Ignore everything in this directory
 *
 # Except this file
