--- a/flyway.properties
+++ b/flyway.properties
@@ -1,5 +1,5 @@
 flyway.user=postgres
 flyway.password=postgres
-flyway.schemas=bot-db
+flyway.schemas=cargo_distributor
 flyway.url=jdbc:postgresql://localhost:6432/postgres
 flyway.locations=filesystem:src/main/resources/migration
