replaced LruCache with guava cache

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <systemPath>${project.basedir}/libs/caparf.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.2.1-jre</version>
+        </dependency>
+        <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-longpolling</artifactId>
             <version>7.2.1</version>
